--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-SpeechRecognition==3.8.1
-langchain_groq
-deep_translator 
-gtts
-io
+streamlit==1.42.2
+SpeechRecognition==3.10.0
+langchain_groq==0.2.4
+deep_translator==1.11.4
+gtts==2.5.4
